--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl: ^0.19.0
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  get_storage: ^2.1.1
+  firebase_storage: ^12.3.4
   
 
 dev_dependencies:
