--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   cloud_firestore: ^5.4.4
   get_storage: ^2.1.1
   firebase_storage: ^12.3.4
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.4
+  shared_preferences: ^2.3.2
   
 
 dev_dependencies:
