--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^17.2.4
   shared_preferences: ^2.3.2
+  speech_to_text: ^7.0.0
   
 
 dev_dependencies:
@@ -75,7 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
