--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_local_notifications: ^17.2.4
   shared_preferences: ^2.3.2
   speech_to_text: ^7.0.0
+  audioplayers: ^6.1.0
+  youtube_explode_dart: ^1.12.4
+  youtube_player_flutter: ^9.1.1
   
 
 dev_dependencies:
@@ -76,8 +79,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+ 
   assets:
-  - assets/logo.png
+    - assets/logo.png
+    - assets/mobile_legend.mp3
+
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
