--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   audioplayers: ^6.1.0
   youtube_explode_dart: ^1.12.4
   youtube_player_flutter: ^9.1.1
+  video_player: ^2.9.2
   
 
 dev_dependencies:
