--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   url_launcher: ^6.3.1
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
+  connectivity_plus: ^6.1.0
   
 
 dev_dependencies:
